adding plotting fxns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(boilDown)
 export(myBTM)
 export(networkSimplifier)
+export(plotAON)
+export(prepAON)
 export(spSig)
 export(transCruncher)
 export(transPlotter)
@@ -15,10 +17,13 @@ importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
+importFrom(igraph,E)
+importFrom(igraph,V)
 importFrom(igraph,get.adjacency)
 importFrom(igraph,graph.data.frame)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,is.dag)
+importFrom(igraph,plot.igraph)
 importFrom(inline,cfunction)
 importFrom(iterators,iter)
 importFrom(plyr,rbind.fill)
